--------------------------- Changelog -----------------------------
4.0.d
Added - IndEvo_setMarketGrowth console command to set a market to a certain growth level
Adjusted - Engineering Hub Blueprint selection now specifies hull size for easier overview
Adjusted - Reverted Engineering Hub auto-whitelist to a slightly less permissive system (can't RE the stations the shipyards gave you anymore...)
Adjusted - Corpo Gov immigration reduction adjusted to -1 / 20.000c (down from -1 / 10.000c)
Fixed - Mandated Overtime Edict now works properly (Many, many thanks to Starficz and Lukas!)
Fixed - Automated shipyards no longer give out stations
Fixed - Commerce Raiding now works again (REQUIRES A NEW SAVE)
Fixed - Luddic Majority will now show up again (REQUIRES A NEW SAVE)
Fixed - Making a detachment no longer reverts ships to a random autofit
Fixed - Planetary Shield no longer shows up as duplicate in the build menu
Fixed - Bandaid-Fix for the Camouflage Field Emitter combat glitch overlay crash (won't crash anymore, but source of error not known)
Fixed - Having planetary shield and building cloud painter no longer causes a crash
Fixed - Corpo Gov now properly lets you use growth incentives at max size
Fixed - Micromanagement Skill no longer toggles remote management off when it's on by default
Fixed - Can no longer duplicate the nexerelin omega merc ship
Fixed - Codex entries for all Industrial Evolution content now work as expected

4.0.c
Fixed - Mandated Overtime no longer immediately crashes the game
Fixed - Interacting with the ancient shipyard no longer crashes your game
Fixed - Custom Warning beacons crashing when reloading the game and entering hyperspace

4.0.b
Items
Fixed - Hotfix for a crash occurring when clicking an abyssal item

4.0.a
General
Added - Dialogue option to dismantle hyperspace warning beacons
Added - Framework to add some small lore text about how a planet fell to ruin when you survey (on request by Alfonzo)