@@ -6,12 +6,12 @@
     {
         "major":4,
         "minor":0,
-        "patch":"c"
+        "patch":"d"
     },
 
     #Link towards a direct download, fetched from the online version file
-                "directDownloadURL":"https://github.com/SirHartley/Industrial.Evolution/releases/download/4.0.c/Industrial.Evolution4.0.c.zip",
+    "directDownloadURL":"https://github.com/SirHartley/Industrial.Evolution/releases/download/4.0.d/Industrial.Evolution4.0.d.zip",
 
-                #Link towards a directly accessible text file, which can be used to display a changelog ingame, is fetched from the online version file.
-                "changelogURL":"https://raw.githubusercontent.com/SirHartley/Industrial.Evolution/refs/heads/master/Changelog",
+    #Link towards a directly accessible text file, which can be used to display a changelog ingame, is fetched from the online version file.
+    "changelogURL":"https://raw.githubusercontent.com/SirHartley/Industrial.Evolution/refs/heads/master/Changelog",
 }
