@@ -113,6 +113,8 @@ public class Settings {
     public static final String CLOUD_PAINTER_SHIELD_REMOVE = "IndEvo_CPShieldRemove";
     public static final String CORRUPTION = "IndEvo_Corruption";
     public static final String CORRUPTION_CUTOFF = "IndEvo_CorruptionCutoff";
+    public static final String DECON_ALLOW_NEX_OMEGA = "IndEvo_DeconAllowNexOmega";
+    public static final String ENGHUB_STRICT_WL = "IndEvo_EngHubStrictWhitelist";
 
     public static boolean getBoolean(String s){
         if (Global.getSettings().getModManager().isModEnabled("lunalib")) {
