@@ -2,7 +2,7 @@
 	"id":"IndEvo", # internal id
 	"name":"Industrial.Evolution", # displayed to the player
 	"author":"SirHartley",
-	"version":"4.0.c",
+	"version":"4.0.d",
 	"description":"Expands the available campaign content through addition of buildings, interactions, abilities, events, terrain and exploration content.",
 	"gameVersion":"0.98a",
 	"jars":["jars/IndEvo.jar"],
